--- a/Salt/Base.lproj/Main.storyboard
+++ b/Salt/Base.lproj/Main.storyboard
@@ -673,17 +673,53 @@
                         <value key="minSize" type="size" width="500" height="400"/>
                     </window>
                     <connections>
-                        <segue destination="5gI-5U-AMq" kind="relationship" relationship="window.shadowedContentViewController" id="nsd-lR-9xd"/>
+                        <segue destination="3Ot-az-c0S" kind="relationship" relationship="window.shadowedContentViewController" id="qsX-4L-MyC"/>
                     </connections>
                 </windowController>
                 <customObject id="6f7-a7-6o1" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="75" y="250"/>
         </scene>
-        <!--View Controller-->
+        <!--Tab View Controller-->
+        <scene sceneID="KP8-7U-FAI">
+            <objects>
+                <tabViewController selectedTabViewItemIndex="0" id="3Ot-az-c0S" sceneMemberID="viewController">
+                    <tabViewItems>
+                        <tabViewItem id="1ZQ-9y-Nea"/>
+                        <tabViewItem id="wjc-Mx-KLw"/>
+                    </tabViewItems>
+                    <tabView key="tabView" type="noTabsNoBorder" id="oLj-jq-kbc">
+                        <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <font key="font" metaFont="message"/>
+                        <tabViewItems/>
+                    </tabView>
+                    <connections>
+                        <segue destination="5gI-5U-AMq" kind="relationship" relationship="tabItems" id="t1l-AA-aYv"/>
+                        <segue destination="K7V-4K-kCo" kind="relationship" relationship="tabItems" id="pGV-jI-VWH"/>
+                    </connections>
+                </tabViewController>
+                <customObject id="TZ3-XZ-QhJ" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-27" y="839"/>
+        </scene>
+        <!--Node Editor-->
+        <scene sceneID="JH9-Bi-gxc">
+            <objects>
+                <viewController title="Node Editor" id="K7V-4K-kCo" sceneMemberID="viewController">
+                    <view key="view" id="gZU-sR-iaD" customClass="PianoRollView" customModule="Salt" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </view>
+                </viewController>
+                <customObject id="8Fp-aR-IzN" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="385" y="1273"/>
+        </scene>
+        <!--Piano Roll-->
         <scene sceneID="hIz-AP-VOD">
             <objects>
-                <viewController id="5gI-5U-AMq" customClass="ViewController" customModule="Salt" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Piano Roll" id="5gI-5U-AMq" customClass="ViewController" customModule="Salt" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" wantsLayer="YES" id="ERx-hH-rdd">
                         <rect key="frame" x="0.0" y="0.0" width="706" height="344"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -739,7 +775,7 @@
                                             <rect key="frame" x="0.0" y="328" width="480" height="16"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
-                                        <scroller key="verticalScroller" verticalHuggingPriority="750" horizontal="NO" id="cuW-G2-Liu">
+                                        <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="cuW-G2-Liu">
                                             <rect key="frame" x="464" y="0.0" width="16" height="344"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
@@ -768,7 +804,7 @@
                 </viewController>
                 <customObject id="2Tp-Fl-jBw" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="188" y="692"/>
+            <point key="canvasLocation" x="-217" y="1273"/>
         </scene>
     </scenes>
 </document>
